--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
  "mcp>=1.1.0",
  "pandoc>=2.4",
+ "pypandoc>=1.14",
 ]
 [[project.authors]]
 name = "Vivek Vellaiyappan Surulimuthu"
