--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
  "mcp>=1.1.0",
  "pandoc>=2.4",
  "pypandoc>=1.14",
+ "weasyprint>=63.1",
 ]
 [[project.authors]]
 name = "Vivek Vellaiyappan Surulimuthu"
