--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcp-pandoc"
-version = "0.6.0"
+version = "0.5.0"
 description = "MCP to interface with pandoc to convert files to different formats with enhanced features like Mermaid diagram conversion and defaults file support."
 readme = "README.md"
 requires-python = ">=3.11"
@@ -19,6 +19,12 @@ email = "vivekvellaiyappans@gmail.com"
 [build-system]
 requires = [ "hatchling",]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest-asyncio>=1.0.0",
+    "pytest>=8.4.1",
+]
 
 [project.scripts]
 mcp-pandoc = "mcp_pandoc:main"
