--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,21 @@ build-backend = "hatchling.build"
 dev = [
     "pytest-asyncio>=1.0.0",
     "pytest>=8.4.1",
+    "ruff>=0.12.11",
+    "jsonschema>=4.25.1",
+    "yamllint>=1.37.1",
+    "pre-commit>=4.3.0",
 ]
 
 [project.scripts]
 mcp-pandoc = "mcp_pandoc:main"
+[tool.ruff]
+line-length = 120
+exclude = ["tests/*"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B", "UP", "D", "N", "S"]
+ignore = []
+
+[tool.yamllint]
+config-file = ".yamllint.yaml"
