--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install uv
       run: pip install uv
 
+    - name: Install Pandoc
+      run: sudo apt-get update && sudo apt-get install -y pandoc
+
     - name: Sync dependencies (all groups)
       run: uv sync --all-groups
 
