fix: Add TeX Live installation for PDF conversion in CI
- Install texlive-xetex package alongside pandoc in CI
- Fixes test failure: 'pdflatex not found' error
- Required for PDF conversion as documented in README/CHEATSHEET
- Aligns CI environment with documented prerequisites
- Enables test_bidirectional_conversions[pdf-md] to pass

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install uv
       run: pip install uv
 
-    - name: Install Pandoc
-      run: sudo apt-get update && sudo apt-get install -y pandoc
+    - name: Install Pandoc and TeX Live
+      run: sudo apt-get update && sudo apt-get install -y pandoc texlive-xetex
 
     - name: Sync dependencies (all groups)
       run: uv sync --all-groups
